# libconfig-rs

./: .gitmodules  Cargo.toml  README.md
crates/input/: test.cfg  test_with_include.cfg
crates/libconfig/: Cargo.toml
crates/libconfig-cpp/: Cargo.toml  build.rs
crates/libconfig-cpp/examples/: config_path.rs
crates/libconfig-cpp/src/: lib.rs
crates/libconfig-sys/: Cargo.toml  build.rs
crates/libconfig-sys/examples/: read_config.rs  test.cfg  test_bad.cfg
crates/libconfig-sys/include/: wrapper.h
crates/libconfig-sys/src/: lib.rs
crates/libconfig/src/: lib.rs
